--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -220,7 +220,7 @@
                                             <td class="bold">{{prod.surname}} {{prod.name}}</td>
                                             <td class="bold" ng-if="prod.isTeamLeader">
                                                  
-                                                 <select  id="memberrole" ng-click="changeRole(prod,1)">
+                                                 <select class="select3" id="memberrole" ng-click="changeRole(prod,1)">
                                                     <option value="teamlead" selected >Team leader</option>
                                                     <option value="member" >Member</option>
                                        
