--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -89,7 +89,8 @@
                                         </td>
                                         <td class="text-right">
                                              <div class="btn-table-mobile">
-                                                <button class="btn btn-white btn-bitbucket btn-sm" type="button" ng-click="OpenCreateModal(client)"><i class="fa fa-pencil"></i> Edit</button>
+                                                 <button type="button" class="btn btn-white btn-sm" ng-click="OpenCreateModal(client)"><i class="fa fa-pencil"></i> </button>
+                                        <a href="#/clientprojects/{{client.id}}" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
                                                 
                                             </div>
                                         </td>
