fix report filter bug

--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -79,7 +79,7 @@
                                           </div>
 
                                           <div class="form-group fleft mr10 mb10">
-                                            <select class="select3" ng-model="paymentstatus" ng-change="filterPayment()">
+                                            <select ng-if='isTicketReport' class="select3" ng-model="$parent.paymentstatus" ng-change="filterPayment()" >
                                                     <option value="all" selected="selected">All</option>
                                                     <option value="open">Not Billed</option>
                                                     <option value="billed">Billed</option>
