add project rate to project details

--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -1077,7 +1077,7 @@
                                     <div class="col-md-4 pr0 mb20 aright">
                                         <h2 class="mt0 mb5 bold">
                                             <i class="fa fa-euro"></i> 
-                                            <span class="hour">30</span>
+                                            <span class="hour">{{projectrate}}</span>
                                         </h2>
                                         <span class="project-details-info mb10">per hour</span>
                                     </div>
