add country list

--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -165,9 +165,8 @@
                                                         <option value="goproduction">go production</option>
                                                         <option value="waiting">waiting</option>
                                                         <option value="production">production</option>
-                                                        <option value="testing">Q&A</option>
+                                                        <option value="testing">QA</option>
                                                         <option value="accept">in confirmation</option>
-                                                        <option value="reject">rejected</option>
                                                         <option value="done">done</option>
                                                     </select>
                                                 </div>
