add austria phonecode

--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -210,6 +210,7 @@
                                 <!--select-->
                                 <div class="select-option f-left m-0" style="width: 30%; margin-right: 2.5% ! important;" >
                                     <select class="select2" ng-model="phonecode" id="phonecode">
+                                        <option value="43">+43</option>
                                         <option value="49">+49</option>
                                         <option value="41">+41</option>
                                         <option value="90">+90</option>
