fix cient user menu

--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -4,7 +4,7 @@
 <div ng-controller="SideBarCtrl">
     <nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu" ng-if="isclient">
+            <ul class="nav metismenu" id="side-menu" ng-if="isclient || isClientUser">
                         <li class="nav-logo">
                             <div class="nav-logo-element">
                                 <a href="#/dashboard">
