fix small issues

--- a/app/css/style-external.css
+++ b/app/css/style-external.css
@@ -1411,11 +1411,23 @@ a.message-author{
 .project-estimation .fa-bug{
   display: block;
 }
-
 .project-estimation .hour{
+  font-size: 14px;
+}
+
+.project-real-time .fa-bug{
+  display: block;
+}
+.project-real-time .hour{
   font-size: 14px;
   font-weight: bold;
 }
+.project-real-time a {
+  border-bottom: 1px dotted #aaa;
+  color: #aaa;
+  display: table;
+}
+
 .project-report-estimation{
 
 }
@@ -2598,6 +2610,19 @@ li.key-account a{
   text-align: right;
 }
 
+.total-estimation{
+  display: inline-block;
+  text-align: right;
+  margin-right: 10px;
+  padding-right:10px;
+  border-right: 1px solid #eee;
+}
+
+.total-real-time  {
+  display: inline-block;
+  text-align: left
+}
+
 /* MOBILE */
 @media (max-width: 350px) {
   .nav.navbar-top-links li.dropdown {
@@ -2623,4 +2648,69 @@ li.key-account a{
     margin-bottom: 10px;
     display: inherit;
   }
+}
+
+/*extras*/
+select.select3 {
+    padding:4px 25px 4px 4px;
+    height: 34px;
+    margin: 0;
+    background: #fff;
+    color:#888;
+    border:none;
+    outline:none;
+    display: inline-block;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    cursor:pointer;
+    width: 215px;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    border: 1px solid #e5e6e7;
+    border-radius: 3px;
+}
+
+select.select3:hover{
+  border-color: #1ab394;
+  transition: all 0.5s;
+}
+
+/* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    select.select3 {padding-right:18px}
+}
+
+label.label3 {position:relative}
+label.label3:after {
+  color: #aaa;
+  content: "\f107";
+  font-family: "FontAwesome";
+  font-size: 11px;
+  padding: 0 0 2px;
+  pointer-events: none;
+  position: absolute;
+  right: 12px;
+  top: 9px;
+}
+label.label3:before {
+  background: transparent;
+  content: "";
+  display: block;
+  height: 33px;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 34px;
+}
+.laoder{
+  width: 100%;
+  text-align: center;
+}
+.beta{
+  display: block;
+  font-size: 12px;
+  color: #666;
+  margin-top: 10px;
 }
