--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -78,7 +78,7 @@
                                             {{client.email}}
                                         </td>
                                         <td>
-                                            {{client.phonecode}} {{client.telnumber}}
+                                            +{{client.phonecode}} {{client.telnumber}}
                                         </td>
                                         <td>
                                             <span class="label label-primary"><i class="fa fa-clone"></i>{{client.projectNumber}}</span>
