--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -11,7 +11,7 @@
                                 <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
                                     <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}} <i class="fa fa-angle-down"></i></span>
-                                    <span class="ka-span-2">{{keyaccount.tel}}</span>
+                                    <span class="ka-span-2">+{{keyaccount.tel}}</span>
                                 </div>
                                 <div class="clear-both"></div>
                             </a>
@@ -33,7 +33,7 @@
                                     <div class="col-lg-12">
                                         <img width="70" heigth="70" alt="image" class="img-circle" src="{{keyaccount.photo}}">
                                         <h2 class="mb0 bold">{{keyaccount.name}} {{keyaccount.surname}}</h2>
-                                        <h2 class="mt10">{{keyaccount.tel}}</h2>
+                                        <h2 class="mt10">+{{keyaccount.tel}}</h2>
                                         <h2 class="mt10"><a href="" class="fxwlink">{{keyaccount.email}}</a></h2>
                                     </div>
                                 </div><!--row-->
