--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -239,7 +239,7 @@
                                                         </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Goproduction.status">
                                                             <button type="button" class="btn btn-primary btn-xs fxw-alert-confirm-estimation" ng-click="acceptEstimation(ticket)"><i class="fa fa-chevron-right" ></i> confirm</button>
-                                                             <button type="button" class="btn btn-danger btn-xs fxw-alert-reject-ticket" ng-click="rejectEstimation(ticket)"><i class="fa fa-undo" ></i> reject</button>
+                                                             <button type="button" class="btn btn-danger btn-xs fxw-alert-reject-ticket" ng-click="rejectEstimation(ticket)"><i class="fa fa-undo" ></i> re-edit</button>
                                                             <small>please confirm for production</small>
                                                         </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Waiting.status">
