add mini editor

--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -300,7 +300,7 @@
                         <input type="text" class="form-control input-lg" placeholder="Project Title" ng-model="aprojecttitle">
                     </div>
                     <div class="form-group">
-                         <textarea class="form-control textarea-keybox" placeholder="Briefing" ng-model="apbriefing"></textarea>
+                         <div text-angular  ta-toolbar="[['h3','p','bold','ul','ol','insertLink','undo']]" ng-model="apbriefing"></div>
                     </div>
                     <div class="form-group mb0">
                         <select data-placeholder="Select Technologies" class="select2 chosen-select" multiple style="width:100%;" tabindex="2" ng-model="aprojectskills" id="apskillsselct">
