--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -356,9 +356,9 @@
                         <input type="text" class="form-control input-lg" placeholder="Project Title" ng-model="projecttitle">
                     </div>
                     <div class="form-group">
-                         <textarea class="form-control textarea-keybox" placeholder="Briefing" ng-model="briefing"></textarea>
+                         <div text-angular  ta-toolbar="[['h3','p','bold','ul','ol','insertLink','undo']]" ng-model="briefing"></div>
                     </div>
-                     <div class="form-group" id="clientSelectionArea">
+                     <div class="form-group mt20" id="clientSelectionArea">
                         <div class="select-option m-0" style="width: 100%;">
                             <select class="select2" id="clientselection" ng-model="selectedClient">
                                 <option ng-repeat="client in clients" value="{{client.id}}">{{client.companyname}} </option>
