--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -126,8 +126,7 @@
                                     </div>
 
                                     <div class="row none" id="ticket-description">
-                                        <div class="col-lg-12">
-                                           {{ticket_decription}}
+                                        <div class="col-lg-12" ng-bind-html="ticket_decription">
                                         </div>
                                     </div>
 
@@ -277,8 +276,8 @@
                                                                 {{story.title}}
                                                                  <small ng-if="story.assignto!=null">Assign to: <b>{{story.assignto.name}}</b></small>
                                                                  <small ng-if="story.assignto==null">Not assigned</b></small>
-                                                                  <a class="project-details-see-description" name="{{story.id}}" onClick="toggle_visibility(this.name);">see description <i class="fa fa-angle-down"></i></a>
-                                                                  <span class="row none" id="{{story.id}}"><small>{{story.description}}</small></span>
+                                                                  <!-- <a class="project-details-see-description" name="{{story.id}}" onClick="toggle_visibility(this.name);">see description <i class="fa fa-angle-down"></i></a>
+                                                                  <span class="row none" id="{{story.id}}"><small ng-bind-html="story.description"></small></span> -->
                                                             </td>
                                                             <td class="project-estimation" ng-if="isclient && story.estimation!=null">
                                                                 <i class="fa fa-clock-o"></i> 
@@ -629,7 +628,7 @@
         </div>
     </div> 
 <div class="modal inmodal fade" id="add-story" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -654,7 +653,7 @@
                                 </select>
                             </div>
                             <div class="form-group m0">
-                                 <textarea class="form-control textarea-keybox" placeholder="Description" ng-model="storydescription"></textarea>
+                                 <div text-angular  ta-toolbar="[['h3','p','bold','ul','ol','insertLink','undo']]" ng-model="storydescription"></div>
                             </div>
                             
                         </div>
@@ -669,7 +668,7 @@
        
 </div>
 <div class="modal inmodal fade" id="add-bug" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -690,7 +689,7 @@
                                 </div>
                             </div>
                             <div class="form-group m0">
-                                 <textarea class="form-control textarea-keybox" placeholder="Description" ng-model="storydescription"></textarea>
+                                 <div text-angular  ta-toolbar="[['h3','p','bold','ul','ol','insertLink','undo']]" ng-model="storydescription"></div>
                             </div>
                             
                         </div>
